kubernetes/apps/o11y/vm/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vm
spec:
  hostnames:
    - vmetrics.jonandlinz.io
  parentRefs:
    - name: envoy-internal
      namespace: network

  rules:
    - matches:
      - path:
          type: PathPrefix
          value: "/targets"
      backendRefs:
        - name: vmagent-stack
          namespace: &ns o11y
          port: 8429
    - matches:
      - path:
          type: PathPrefix
          value: "/alerts"
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: vmalert-stack
          namespace: *ns
          port: 8080
    - backendRefs:
        - name: vmsingle-stack
          namespace: *ns
          port: 8429
